--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
+
 /* Box sizing rules */
 *,
 *::before,
@@ -36,7 +38,163 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
+body{
+  background: linear-gradient(180deg, #FFFFFF 0%, #F3F8F7 49.91%, #FFF9F5 94.19%);
+  width: 1440px;
+  overflow-x: hidden;
+  font-family: Montserrat, sans-serif;
+  
+  
+}
+.wrapper {
 
+  height: 1406px;
+  position: relative;
+  width: 1450px;
+}
+.branding-img {
+  position: absolute;
+  width: 193px;
+  height: 47.64px;
+  left: 221px;
+  top: 50.25px;
+}
+.title {
+  position: absolute;
+  width: 458px;
+  height: 135px;
+  left: 221px;
+  top: 236px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 68px;
+}
+.text {
+  position: absolute;
+  width: 394px;
+  height: 96px;
+  left: 221px;
+  top: 403px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+}
+.apple-store{
+  position: absolute;
+  width: 138.44px;
+  height: 46.28px;
+  left: 221px;
+  top: 531px;
+
+}
+.google-store{
+  position: absolute;
+  width: 156.19px;
+  height: 46.28px;
+  left: 381.81px;
+  top: 531px;
+}
+.main-img-container{
+  position: absolute;
+  width: 535.72px;
+  height: 309.27px;
+  left: 683.28px;
+  top: 229.73px;
+}
+.main-img-container img{
+  height: 400px;
+}
+.profile-img{
+  position: absolute;
+  height: 440px;
+  left: 737px;
+  right: 479px;
+  top: 686px;
+}
+.orders-img{
+  position: absolute;
+  height: 470px;
+  left: 479px;
+  right: 737px;
+  top: 913px;
+}
+.home-img{
+  position: absolute;
+  height: 470px;
+  left: 995px;
+  right: 221px;
+  top: 908px;
+}
+.cart-img{
+  position: absolute;
+  height: 250px;
+  left: 221px;
+  right: 995px;
+  top: 1157px;
+}
+.product-img{
+  position: absolute;
+  height: 250px;
+  left: 737px;
+  right: 479px;
+  top: 72rem;
+}
+.apple-store{
+position: absolute;
+width: 140px;
+height: 10rem;
+left: 221px;
+top: 33.5rem;
+}
+.apple-store img{
+  width: 138px;
+  height: 47px;
+}
+.google-store{
+  
+position: absolute;
+width: 156.19px;
+height: 46.28px;
+left: 381.81px;
+top: 33.5rem;
+}
+.google-store img{
+  width: 156px;
+  height: 47px;
+  border-radius: 5px;
+}
+.background-toggles{
+  position: absolute;
+  right: 150px;
+  top: 3.5rem;
+  display: flex;
+}
+.background-toggles > div {
+  height: 25px;
+  width: 25px;
+  border-radius: 5px;
+  margin-right: 10px;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+.background-1{
+  background-color: #e4e4e4;
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23f5f5f5' fill-opacity='0.28'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+.background-2 {
+  background: #0F2027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.background-3{
+  background: #0F2027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
